...
                                  ));
                              FFAppState().todocash = true;
                              safeSetState(() {});
                              if (mounted) await MomRiseConfirmation.show(context, message: 'Task Created');
                              if (widget.fromPage == 'Tasks') {
                                context.pushNamed(TasksWidget.routeName);
                              } else if (widget.fromPage == 'Home') {
                                context.pushNamed(HomeHybridWidget.routeName);
                              } else {
                                context.pushNamed(CalendarpageWidget.routeName);
                              }
                            } else {
                              _model.isDAteselected = true;
                              safeSetState(() {});
                            }
                          },
                          text: 'Create',
                          options: FFButtonOptions(
                            height: 40.0,
                            padding: const EdgeInsetsDirectional.fromSTEB(
                                16.0, 0.0, 16.0, 0.0),
                            iconPadding: const EdgeInsetsDirectional.fromSTEB(
                                0.0, 0.0, 0.0, 0.0),
...
