...
  }

  Color _getEventTypeColor() {
    switch (eventType) {
      case 'Todo':
        return const Color(0xFF1976D2);
      case 'Learning':
        return const Color(0xFF7C4DFF);
      case 'Activity':
        return const Color(0xFFFF9800);
      default:
        return const Color(0xFF00897B);
    }
...
